--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,10 @@ project_urls = https://github.com/ShortArrow/pyxlimg
     Bug Tracker = https://github.com/ShortArrow/pyxlimg/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE Version 3
+    License :: OSI Approved :: GPLv3
     Operating System :: OS Independent
 
 [options]
 packages = find:
+    Pillow
 python_requires = >=3.8
