--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,19 @@
+[tool.poetry]
+name = "pyxlimg"
+version = "0.1.0"
+description = "Image Extractor for XLSX files"
+authors = ["ShortArrow <bamboogeneral@live.jp>"]
+license = "GPL3"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.9"
+Pillow = "^8.1.2"
+
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
+black = "^20.8b1"
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
