--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Pillow = "^8.1.2"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
 black = "^20.8b1"
+Sphinx = "^3.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
