--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ Pillow = "^8.1.2"
 pytest = "^6.2.2"
 black = "^20.8b1"
 Sphinx = "^3.5.2"
+sphinx-rtd-theme = "^0.5.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
