--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ black = "^20.8b1"
 Sphinx = "^3.5.2"
 sphinx-rtd-theme = "^0.5.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest-watch = "^4.2.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
