--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,8 +13,13 @@ sphinx:
 formats:
   - htmlzip
 
-# Optionally set the version of Python and requirements required to build your docs
-python:
-  version: 3.8
-  install:
-    - requirements: requirements.txt
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+  jobs:
+    post_create_environment:
+      - pip install poetry
+      - poetry config virtualenvs.create false
+    post_install:
+      - poetry install --with docs
