--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "pyxlimg"
-version = "0.1.1"
+version = "0.1.2"
 description = "Image Extractor for XLSX files"
 authors = ["ShortArrow <bamboogeneral@shortarrow.jp>"]
 maintainers = ["ShortArrow <bamboogeneral@shortarrow.jp>"]
-license = "GPL3"
+license = "GPL-3-or-later"
 readme = "README.md"
 repository = "https://github.com/shortarrow/pyxlimg"
 homepage = "https://shortarrow.jp"
