--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyxlimg"
-version = "0.1.4"
+version = "0.1.5"
 description = "Image Extractor for XLSX files"
 authors = ["ShortArrow <bamboogeneral@shortarrow.jp>"]
 maintainers = ["ShortArrow <bamboogeneral@shortarrow.jp>"]
@@ -12,22 +12,22 @@ documentation = "https://pyxlimg.readthedocs.io/en/latest/pyxlimg.html"
 keywords = ["xlsx", "image", "PIL", "Pillow", "Excel"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-Pillow = "^10.0.0"
+python = "^3.10"
+Pillow = "^10.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^6.2.2"
-black = "^20.8b1"
-pytest-watch = "^4.2.0"
+pytest = "^7.0"
+black = "^23.0"
+pytest-watch = "^4.2"
 
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
 myst-parser = ">=0.16"
-sphinx = ">=4.0"
+sphinx = ">=7.0"
 sphinx-autobuild = ">=2021.0"
-sphinx-rtd-theme = ">=1.0"
+sphinx-rtd-theme = ">=2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
